--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "puppeteer-core": "^24.7.2",
         "sortablejs": "^1.15.6"
     }
 }
