--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT=
+
+INVOICE_ACCOUNT_PREFIX=
+INVOICE_ACCOUNT_NUMBER=
+INVOICE_ACCOUNT_CODE=
